fixed the padding do the ul was not covering the logo

--- a/style.css
+++ b/style.css
@@ -118,8 +118,7 @@ header {
   justify-content: space-between;
 }
 
-.primaryNav,
-.navFlex {
+.primaryNav {
   display: flex;
   gap: 2rem;
   align-items: center;
@@ -127,6 +126,7 @@ header {
 
 ul {
   list-style-type: none;
+  padding: 0;
 }
 
 a {
@@ -142,9 +142,14 @@ a:hover {
   display: none;
 }
 
+.navBackgroup {
+  display: none;
+}
+
 @media screen and (max-width: 35rem) {
   .primaryNav {
     position: fixed;
+    flex-direction: column;
     align-items: start;
     background-color: var(--clr-neutral100);
     inset: 30%;
@@ -152,19 +157,16 @@ a:hover {
     width: 100%;
     top: 0;
     padding-top: min(20vh, 10rem);
+    padding-left: min(10vw, 3rem);
   }
   .navBackgroup {
+    display: block;
     position: fixed;
     background-color: hsl(240, 100%, 5%, 0.5);
     height: 100%;
     width: 100%;
     top: 0;
     left: 0;
-  }
-  .navFlex {
-    flex-direction: column;
-    justify-content: start;
-    align-items: start;
   }
 
   .mobileToggle {
